Responsive looks fine, but the header in mobile devices is too big for the screen, attempting a fix.

--- a/root/styles/styles.scss
+++ b/root/styles/styles.scss
@@ -818,19 +818,19 @@ span {
         border: none;
         display: inline-block;
         margin: 5% auto;
-        font-size: 3rem;
+        font-size: 2.5rem;
         border-bottom: 2px solid $highlight-colour;
     }
 
     .sub-header {
-        font-size: 2.5rem;
+        font-size: 2rem;
         max-width: 90%;
         margin-bottom: 5%;
         margin: 0 auto;
     }
 
     .tag-line-header {
-        font-size: 2.5rem;
+        font-size: 2rem;
         margin: 0 auto;
         margin-bottom: 5%;
     }
